tests/sema/fail/v26_fail_compound_assign_mixed_integer.ep
# COMPILE_FAIL_CONTAINS: compound assignment expected matching integer types, got u32 and i64; use an explicit conversion
fun main(): void {
    let value: u32 = u32(1)
    value += 1
}
